create one-lvl menu. (создание меню первого уровня и вывод продуктов определенной категории)

--- a/src/templates/apps/catalogue/category_all_item.html
+++ b/src/templates/apps/catalogue/category_all_item.html
@@ -1,4 +1,4 @@
-{% extends "apps/catalogue/base.html" %}
+{% extends "base.html" %}
 {% load i18n static %}
 
 {% block content %}
@@ -13,4 +13,3 @@
 
 
 {% endblock %}
-z
