--- a/src/templates/apps/catalogue/inclusion/categories_list.html
+++ b/src/templates/apps/catalogue/inclusion/categories_list.html
@@ -1,9 +1,25 @@
 {% load i18n static %}
 
+{% comment %}
 {% for item in categories %}
-
     <a class="list-group-item " href=" {{ item.get_absolute_url }}">{{ item }}</a>
-
-
 {% endfor %}
+{% endcomment %}
+
+{% load mptt_tags %}
+   {% recursetree categories %}
+
+
+           <a class="list-group-item" href="/category/{{ node.slug }}/">
+           {{ node.name }}|  ({{ node.count_product }})
+            </a>
+
+       {% if not node.is_leaf_node %}
+               <ul class="children">
+                    {{ children }}
+                </ul>
+           {% endif %}
+
+
+    {% endrecursetree %}
 
