--- a/src/templates/apps/catalogue/detail.html
+++ b/src/templates/apps/catalogue/detail.html
@@ -2,8 +2,6 @@
 
 {% block content %}
 
-               <h3>детальный</h3>
-                {{ product.price }}
-                {{ product.descp }}
+ {{ product }}
 
 {% endblock %}
