--- a/src/templates/apps/catalogue/index.html
+++ b/src/templates/apps/catalogue/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 
-   {% for product_vivod in product_list %}
+   {% for product_vivod in index_list_all %}
 
       {% include "apps/catalogue/product_list.html" %}
 
