--- a/src/templates/apps/catalogue/product_list.html
+++ b/src/templates/apps/catalogue/product_list.html
@@ -1,12 +1,14 @@
 
 
 <!-- что б выводились превюшки, нужно в img src= вставить (product_list.url), а не переменную инерации-->
-<div class="col-xs-6 col-sm-6 col-lg-12">
+<div class="col-xs-6 col-sm-6 col-lg-12" >
 
-<p><h2>{{ product_vivod.title }}</h2></p>
-<p>{{ product_vivod.description }}</p>
-<p>{{ product_vivod.date_created }}</p>
-<p>{{ product_vivod.user_name }}</p>
+<p><h2><a href="{{ get_absolute_url }}">{{ product_vivod.title }}</a></h2>
+    <p>{{ product_vivod.pk }}</p>
+
+    <p>{{ product_vivod.description }}</p>
+    <p>{{ product_vivod.date_created|date }}</p>
+    <p>{{ product_vivod.user_name }}</p>
     <hr>
 
   </div>
