создание личного кабинета

--- a/src/templates/base_no_head.html
+++ b/src/templates/base_no_head.html
@@ -36,15 +36,16 @@
         </div>
 
         <div class="collapse navbar-collapse">
-        <!-- Пункты верхнего меню -->
+
+<!-- Пункты верхнего меню -->
                 <ul class="nav navbar-nav">
-            <li><a href="#">Home</a></li>
+            <li><a href="/">Home</a></li>
                 </ul>
 <ul class="nav navbar-nav navbar-right">
 {% load i18n static %}
 
     {% if user.is_authenticated %}
-        <li><a href="">{% trans "Личный кабинет" %}</a></li>
+        <li><a href="{% url "dashboard:dashboard_index" %}">{% trans "Личный кабинет" %}</a></li>
         <li><a href="{% url 'auth_logout' %}">{% trans "Log out" %}</a></li>
     {% else %}
         <li><a href="{% url 'auth_login' %}">{% trans "Log in" %}</a></li>
@@ -61,24 +62,27 @@
 
       <div class="row row-offcanvas row-offcanvas-right">
         <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
-          <div class="list-group">
-            <!-- пункты меню -->
+
+            <!-- Menu --><div class="list-group">
+
+              <!-- пункты меню -->
             {% if user.is_authenticated %}
                 {% trans "Привет" %}: {{ user.username }}
             {% endif %}
 
-            <a href="#" class="list-group-item active">Link</a>
-            <a href="#" class="list-group-item">Link</a>
 
+         {% include 'menu.html' %}
           </div>
-        </div><!--/span-->
+        </div>
 
         <div class="col-xs-12 col-sm-9">
           <p class="pull-right visible-xs">
-            <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
+            <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Меню</button>
           </p>
 
-          {% block content %}{% endblock %}
+          {% block content %}
+
+          {% endblock %}
 
 
 <div class="row">
