--- a/src/templates/search/search.html
+++ b/src/templates/search/search.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
+{% load highlight %}
 
 {% block content %}
     <h2>Search</h2>
 
     <form method="get" action=".">
         <table>
-            {{ form.as_table }}
+            {{ form }}
             <tr>
-                <td>&nbsp;</td>
                 <td>
                     <input type="submit" value="Search">
                 </td>
@@ -15,12 +15,13 @@
         </table>
 
         {% if query %}
-            <h3>Results</h3>
+            <h3>Результат поиска</h3>
 
             {% for result in page.object_list %}
                 <p>
-                    <a href="{{ result.object.get_absolute_url }}">{{ result.object.title }}</a>
+                    <a href="{{ result.object.get_absolute_url }}">{{ result.object.title }}</a><br>{{ result.object.description }}
                 </p>
+
             {% empty %}
                 <p>No results found.</p>
             {% endfor %}
@@ -38,3 +39,6 @@
         </form>
 
 {% endblock %}
+
+
+
