--- a/src/templates/apps/dashboard/add_product.html
+++ b/src/templates/apps/dashboard/add_product.html
@@ -3,10 +3,12 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<form method="post" action=".">
+<div class="form-horizontal" role="form">
+<form role="form" method="post" action=".">
   {% csrf_token %}
   {{ form|crispy }}
 
-  <input class="btn btn-primary " type="submit" value="{% trans 'Submit' %}" />
+  <input type="submit" value="{% trans 'Submit' %}" />
 </form>
+</div>
 {% endblock %}
