--- a/src/templates/apps/dashboard/profile.html
+++ b/src/templates/apps/dashboard/profile.html
@@ -1,15 +1,24 @@
 {% extends "base_no_head.html" %}
 
 {% block content %}
-<h2 class="col-lg-push-7">Личный кабинет  {{ user.username }} 'a</h2>
-  {% if object_list  %}
+    {% if user.is_authenticated %}
 
-  {% for product_vivod in object_list %}
-      {% include "apps/catalogue/product.html" %}
-      {% endfor %}
+        <h2 class="col-lg-push-7">Личный кабинет  {{ user.username }} 'a</h2>
+        <a href="{% url 'dashboard:product_add' %}">добавить объявления</a>
 
-  {% else %}
-У Вас еще нет обьявлений ... {% endif %}
+        {% if object_list  %}
 
+        {% for product_vivod in object_list %}
+        {% include "apps/dashboard/product_dashboard.html" %}
+        {% endfor %}
+
+        {% else %}
+            У Вас еще нет обьявлений ...
+        {% endif %}
+
+    {% else %}
+        оуу парнишка  регайся
+    {% endif %}
 
 {% endblock %}
+
