--- a/src/templates/registration/login.html
+++ b/src/templates/registration/login.html
@@ -1,5 +1,6 @@
 {% extends "base_no_head.html" %}
 {% load i18n %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 
@@ -8,7 +9,7 @@
     <form method="post" action=".">
   <h2 class="form-signin-heading">Please sign in</h2>
   {% csrf_token %}
-  {{ form }}
+  {{ form|crispy }}
 
 <button class="btn btn-primary " type="submit">Sign in</button>
 <p>{% trans "Forgot password" %}? <a href="{% url 'auth_password_reset' %}">{% trans "Reset it" %}</a>!</p>
