widget select in dashboard

--- a/src/templates/apps/dashboard/add_product.html
+++ b/src/templates/apps/dashboard/add_product.html
@@ -3,12 +3,19 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
+{% if user.is_authenticated %}
+
 <div class="form-horizontal" role="form">
 <form role="form" method="post" action=".">
   {% csrf_token %}
   {{ form|crispy }}
 
-  <input type="submit" value="{% trans 'Submit' %}" />
+  <input class="btn btn-success col-sm-4" type="submit" value="{% trans 'Submit' %}" />
 </form>
 </div>
+
+
+{% else %}
+<p>{% trans "Not member" %}? <a href="{% url 'registration_register' %}">{% trans "Register" %}</a>!</p>
+{% endif %}
 {% endblock %}
