--- a/src/templates/apps/dashboard/confirm_delete_product.html
+++ b/src/templates/apps/dashboard/confirm_delete_product.html
@@ -6,7 +6,7 @@
 
 <form action="" method="post">
     {% csrf_token %}
-    <button>Удалить</button>
+   <h3 class="h3">Удалить обьявление?</h3><button>Да</button>
 </form>
 
    {% else %}
