add image field in model.Product

--- a/src/templates/apps/dashboard/product_dashboard.html
+++ b/src/templates/apps/dashboard/product_dashboard.html
@@ -1,8 +1,13 @@
+{% load thumbnail %}
+
+{% thumbnail product_vivod.image "150x150" as object_list %}
+<!-- что б выводились превюшки, нужно в img src= вставить (object_list.url), а не переменную инерации-->
 
 
 <div class="col-xs-6 col-sm-6 col-lg-12" >
-
 <p><h2><a href="{{ product_vivod.get_absolute_url }}">{{ product_vivod.title }}</a></h2>
+
+    <a href="{{ product_vivod.image.url }}" target='_blank'><img class='avatar' src = '{{ object_list.url }}' width = '80' height = '70' /></a>
     <p>{{ product_vivod.description }}</p>
     <p>{{ product_vivod.date_created|date }}</p>
     <p>{{ product_vivod.user_name }}</p>
@@ -14,3 +19,5 @@
 </div>
 
 
+
+{% endthumbnail %}
