--- a/src/templates/base_no_head.html
+++ b/src/templates/base_no_head.html
@@ -71,7 +71,9 @@
             {% endif %}
 
 
-         {% include 'menu.html' %}
+{% load catalogue_widgets %}
+{% menu_tag %}
+
           </div>
         </div>
 
