--- a/src/templates/_pagination.html
+++ b/src/templates/_pagination.html
@@ -1,35 +1,38 @@
 {% load i18n %}
-<div class="pagination">
 
-{% if page_obj.has_next %}
+
+{% if page_obj.has_next or page_obj.has_previous %}
+<div class="text-center">
+    <ul class="pagination ">
+
 
     {% if page_obj.has_previous %}
-        <a href="?{{ page_obj.previous_page_number.querystring }}" class="prev">&lsaquo;&lsaquo; {% trans "Сюды" %}</a>
+        <li><a href="?{{ page_obj.previous_page_number.querystring }}" class="prev">&lsaquo;&lsaquo;</a></li>
     {% else %}
-        <span class="disabled prev">&lsaquo;&lsaquo; {% trans "Сюды" %}</span>
+        <li class="active"><a>&lsaquo;&lsaquo;</a></li>
     {% endif %}
     {% for page in page_obj.pages %}
 
         {% if page %}
             {% ifequal page page_obj.number %}
-                <span class="current page">{{ page }}</span>
+               <li><a>{{ page }}</a></li>
             {% else %}
-                <a href="?{{ page.querystring }}" class="page">{{ page }}</a>
+               <li><a href="?{{ page.querystring }}" class="page">{{ page }}</a></li>
             {% endifequal %}
         {% else %}
-            ...
+            <li><a>...</a></li>
         {% endif %}
 
     {% endfor %}
 
     {% if page_obj.has_next %}
-        <a href="?{{ page_obj.next_page_number.querystring }}" class="next">{% trans "Туды" %} &rsaquo;&rsaquo;</a>
+        <li><a href="?{{ page_obj.next_page_number.querystring }}" class="next">&rsaquo;&rsaquo;</a></li>
     {% else %}
-        <span class="disabled next">{% trans "Туды" %} &rsaquo;&rsaquo;</span>
+        <li class="disabled "><a>&rsaquo;&rsaquo;</a></li>
     {% endif %}
-{% else %}
 
-
+            {% else %}
+</ul>
+</div>
 {% endif %}
 
-</div>
