--- a/src/templates/apps/catalogue/inclusion/categories_list.html
+++ b/src/templates/apps/catalogue/inclusion/categories_list.html
@@ -2,19 +2,38 @@
 {% load mptt_tags %}
 
 
-{% recursetree categories %}
 
+
+
+{% full_tree_for_model catalogue.Category as categories  %}
+{% for node,structure in categories|tree_info %}
+
+    {% if structure.new_level %}<ul><li>{% else %}</li><li>{% endif %}
+    {% ifequal node categories %}
+        <a class="list-group-item" href="/category/{{ node.slug }}/">{{ node.name }}</a>
+    {% else %}
+        <a class="list-group-it" href="/category/{{ node.slug }}/">{{ node.name }}</a>
+        {% ifequal node.parent_id categories.pk %}{% endifequal %}
+    {% endifequal %}
+    {% for level in structure.closed_levels %}</li></ul>{% endfor %}
+{% endfor %}
+-----------------
+
+{% drilldown_tree_for_node test as drilldown cumulative count catalogue.Product.category in game_count %}
+{% for node,structure in drilldown|tree_info %}
+    {% if structure.new_level %}<ul><li>{% else %}</li><li>{% endif %}
+    {% ifequal node test %}
+        <strong>{{ node.name }}</strong>
+    {% else %}
+        <a class="list-group-item" href="/category/{{ node.slug }}/">{{ node.name }}</a>
+        {% ifequal node.parent_id test.pk %}({{ node.game_count }}){% endifequal %}
+    {% endifequal %}
+    {% for level in structure.closed_levels %}</li></ul>{% endfor %}
+{% endfor %}
+-------------------
+<ul class="root">
+    {% recursetree categories %}
         <a class="list-group-item" href="/category/{{ node.slug }}/">{{ node.name }}</a>
 
-        {% if not node.is_leaf_node %}
-
-             <ul class="nav nav-list">
-
-             <li class="active">{{ children }}</li>
-
-             </ul>
-
-        {% endif %}
-{% endrecursetree %}
-
-
+    {% endrecursetree %}
+</ul>
